syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.js.grpc.person";
option java_outer_classname = "PersonService";

service Person{
    rpc FindById(FindPersonRequest) returns (FindPersonResponse){}
}

message FindPersonRequest{
    int32 id = 1;
}

message FindPersonResponse{
    string name = 1;
    int32 age = 2;
    bool sex = 3;
}